--- a/PartyInvites/Views/Home/RsvpForm.cshtml
+++ b/PartyInvites/Views/Home/RsvpForm.cshtml
@@ -5,52 +5,43 @@
 }
 
 <!DOCTYPE html>
-
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
-    <link href="~/Content/Style.css" rel="stylesheet" />
+    <link href="~/Content/Site.css" rel="stylesheet" />
+    <meta name="viewport" content="width:device-width, initial-scale=1.0" />
     <title>RsvpForm</title>
 </head>
 <body>
     <div class="panel panel-success">
-        <div class="panel-heading text-center"><h4>RSVP</h4></div>
+        <div class="panel-heading text-center">
+            <h4>RSVP</h4>
+        </div>
         <div class="panel-body">
             @using (Html.BeginForm())
             {
                 @Html.ValidationSummary()
                 <div class="form-group">
-                    <label>Your name: </label>
-                    @Html.TextBoxFor(x => x.Name, new { @class = "formcontrol" })
+                    <label>Your name:</label>
+                    @Html.TextBoxFor(x=>x.Name, new { @class="form-control" })
                 </div>
                 <div class="form-group">
                     <label>Your email:</label>
-                    @Html.TextBoxFor(x => x.Email, new
-               {
-                   @class = "formcontrol"
-               })
+                    @Html.TextBoxFor(x => x.Email, new { @class = "form-control" })
                 </div>
                 <div class="form-group">
                     <label>Your phone:</label>
-                    @Html.TextBoxFor(x => x.Phone, new
-               {
-                   @class = "formcontrol"
-               })
+                    @Html.TextBoxFor(x => x.Phone, new { @class = "form-control" })
                 </div>
                 <div class="form-group">
                     <label>Will you attend?</label>
-                    @Html.DropDownListFor(x =>  x.WillAttend, new[] {
-                            new SelectListItem() {Text = "Yes,I'll be there",
-                            Value = bool.TrueString},
-                            new SelectListItem() {Text = "No, I can't come",
-                            Value = bool.FalseString}
-                        }, "Choose an option", new {  @class = "formcontrol"})
+                    @Html.DropDownListFor(x => x.WillAttend, new[] {
+                        new SelectListItem() { Text="Yes, I'll be there", Value=bool.TrueString},
+                        new SelectListItem() { Text="No, I can't come", Value=bool.FalseString}
+                    },"Choose an option", new { @class="form-control"})
                 </div>
                 <div class="text-center">
-                    <input class="btn btn-success"
-                           type="submit"
-                           value="Submit RSVP" />
+                    <input class="btn btn-success" type="submit" value="submit RSVP"/>
                 </div>
             }
         </div>
